# asr-pipeline

./: .env.example  .gitignore  compose.yaml  main.py  pyproject.toml
app/: config.py  main.py
app/api/: jobs.py  transcribe.py
app/core/: __init__.py  asr.py
app/db/: models.py  session.py
app/workers/: transcribe_worker.py
