[project]
name = "asr-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "faster-whisper>=1.2.1",
    "psycopg[binary]>=3.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "rq>=2.9.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
